# flask-restless-client

./: README.rst  requirements.txt  setup.cfg
docs/: conf.py  index.rst
docs/notes/: quickstart.rst
docs/src/: cli.rst
restless_client/: __init__.py  client.py  connection.py  filter.py  models.py  utils.py
restless_client/cereal_lazer/: __init__.py  parser.py
restless_client/restless_client_server/: __init__.py
tests/: conftest.py
tests/cereal_lazer/: test_types.py
tests/restless_client/: conftest.py  test_filter.py
tests/restless_client_server/: test_datamodel.py
